// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book IconButtons shows the unowned icon for an unowned book 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-601   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-603 makeStyles-headerUnread-605"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-608"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-610"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-609"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-607"
        >
          <button
            aria-label="unowned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 5.69l5 4.5V18h-2v-6H9v6H7v-7.81l5-4.5M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-606"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-611 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiCardActions-root makeStyles-expandAction-613 MuiCardActions-spacing"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-612"
        data-testid="expandButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book expand expands on handleExpandClick 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-481 makeStyles-expanded-494  MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-483 makeStyles-headerUnread-485"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-488"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-490"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-489"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-487"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-486"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-491 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiCardActions-root makeStyles-expandAction-493 MuiCardActions-spacing"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-expandOpen-495"
        data-testid="expandButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiCollapse-container"
      style="min-height: 0px; height: 0px; transition-duration: 0ms;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            class="MuiCardContent-root"
          >
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Amazon Rating: 4.2
            </div>
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Goodreads Rating: 3.5
            </div>
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Amazon Review: 611
            </div>
            <div
              class="MuiTypography-root MuiTypography-caption"
            >
              Goodreads Review: 5451
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render renders as expected with read property 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-361   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-363 makeStyles-headerRead-364"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-368"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-370"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-369"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-367"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-366"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-371 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiCardActions-root makeStyles-expandAction-373 MuiCardActions-spacing"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-372"
        data-testid="expandButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render should render as expected 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-1   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-3 makeStyles-headerUnread-5"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-8"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-10"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-9"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-7"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-6"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-11 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiCardActions-root makeStyles-expandAction-13 MuiCardActions-spacing"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-12"
        data-testid="expandButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render should render as expected if there are differences 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-241  makeStyles-different-242 MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-243 makeStyles-headerUnread-245"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-248"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-250"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-249"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-247"
        >
          <svg
            aria-hidden="true"
            aria-label="Differences"
            class="MuiSvgIcon-root"
            currentitem="false"
            data-for="differencesIcon-9780553381436"
            data-tip="true"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H5.17L4 17.17V4h16v12zM11 5h2v6h-2zm0 8h2v2h-2z"
            />
          </svg>
          <div
            class="__react_component_tooltip place-top type-dark "
            data-id="tooltip"
            id="differencesIcon-9780553381436"
          >
            <span>
              title old title -&gt; The Happiest Toddler on the Block
              <br />
            </span>
            <span>
              amazonRatingsCount 123 -&gt; 611
              <br />
            </span>
          </div>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-246"
      src="http://books.google.com/books/content?id=njQpY18IazsC&printsec=frontcover&img=1&zoom=1&source=gbs_api"
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-251 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiCardActions-root makeStyles-expandAction-253 MuiCardActions-spacing"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-252"
        data-testid="expandButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Book render should render as expected if there is no thumbnail 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-121   MuiPaper-rounded"
  >
    <div
      class="makeStyles-header-123 makeStyles-headerUnread-125"
      data-testid="header"
    >
      <div
        class="MuiCardHeader-root makeStyles-cardHeader-128"
      >
        <div
          class="MuiCardHeader-avatar makeStyles-avatar-130"
        >
          <p
            class="MuiTypography-root MuiTypography-body2"
          >
            NaN
          </p>
        </div>
        <div
          class="MuiCardHeader-content makeStyles-headerContent-129"
        >
          <p
            class="MuiTypography-root MuiTypography-body2 MuiTypography-alignCenter"
          >
            The Happiest Toddler on the Block
          </p>
        </div>
        <div
          class="MuiCardHeader-action makeStyles-iconButton-127"
        >
          <button
            aria-label="owned"
            class="MuiButtonBase-root MuiIconButton-root"
            data-testid="ownedIcon"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption MuiTypography-alignCenter"
      >
        Toddler, Parenting
      </span>
    </div>
    <img
      class="MuiCardMedia-root MuiCardMedia-media makeStyles-media-126"
      src=" "
      title="The Happiest Toddler on the Block"
    />
    <div
      class="MuiCardContent-root"
    >
      <p
        class="MuiTypography-root makeStyles-description-131 MuiTypography-caption MuiTypography-colorTextSecondary"
      >
        The pediatrician-author of The Happiest Baby on the Block offers parents a groundbreaking new approach for dealing with toddlers, drawing a parallel between a child's development and humankind's journey to civilization and presenting specific behavioral techniques designed to enhance parent-child communication, alleviate tantrums, and increase positive relationships. Reprint. 60,000 first printing.
      </p>
    </div>
    <div
      class="MuiCardActions-root makeStyles-expandAction-133 MuiCardActions-spacing"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-expand-132"
        data-testid="expandButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
